--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-lite-youtube-embed": "^2.4.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "wrangler": "^3.29.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
