--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.0",
+    "microcms-js-sdk": "^3.1.0",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prop-types": "^15.8.1",
